--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 /* globals */
 * { box-sizing: border-box }
-strong {	font-weight: bold }
+strong { font-weight: bold }
 
 body,html {
 	margin: 0;
@@ -66,6 +66,7 @@ body{
 /* common */
 .menu-prompt{
 	position: absolute;
+	cursor: pointer;
 	z-index: 1;
 	top: 50px;
 	left: 100px;
@@ -86,6 +87,23 @@ body{
 	display: table-cell;
   	vertical-align: middle;
 }
+
+body > footer{
+	position: absolute;
+	bottom: 0;
+	left: 0; right: 0; 
+	font-size: 10px;
+	color: rgba(255,255,255,0.2);
+	z-index: 1;
+	text-transform: uppercase;
+	line-height: 1.3;
+	display: flex;
+}
+
+body > footer {
+
+}
+
 
 /* home */
 .section{
