--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body,html {
 	margin: 0;
 	padding: 0;
 	touch-action: manipulation;
-	user-select: none; 
+	/*user-select: none; */
 	font-size: 100%;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: none;
@@ -89,19 +89,34 @@ body{
 }
 
 body > footer{
+	display: flex;
 	position: absolute;
 	bottom: 0;
 	left: 0; right: 0; 
-	font-size: 10px;
-	color: rgba(255,255,255,0.2);
+	font-size: 9px;
+	color: rgba(150,150,150,0.6);
 	z-index: 1;
 	text-transform: uppercase;
-	line-height: 1.3;
-	display: flex;
+	line-height: 2;
+	padding: 0 100px 50px;
+	transition: color .7s ease-out;
+	text-shadow: 1px 0 rgba(0,0,0,0.2);
 }
 
-body > footer {
+body > footer > div{
+	margin-right: 30px;
+}
 
+body > footer > div a{
+	color: rgba(150,150,150,0.6);
+	text-decoration: none;
+	font-weight: bold;
+	transition: color .7s ease-out;
+}
+
+body > footer:hover > div a,
+body > footer:hover{
+	color: rgba(200,200,200,0.6);
 }
 
 
