--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,18 +89,17 @@ body{
 }
 
 body > footer{
+	z-index: 1;
 	display: flex;
 	position: absolute;
-	bottom: 0;
-	left: 0; right: 0; 
-	font-size: 9px;
+	bottom: 0; left: 0; right: 0; 
 	color: rgba(150,150,150,0.6);
-	z-index: 1;
 	text-transform: uppercase;
+	font-size: 0.7vw;
 	line-height: 2;
 	padding: 0 100px 50px;
-	transition: color .7s ease-out;
 	text-shadow: 1px 0 rgba(0,0,0,0.2);
+	transition: color .7s ease-out;
 }
 
 body > footer > div{
