--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,11 +118,12 @@ body > footer:hover{
 	color: rgba(200,200,200,0.6);
 }
 
-
-/* home */
 .section{
+	position: relative;
 	z-index: 0;
 }
+
+/* home */
 .home .swiper-slide{
 	background-size: cover;
 	height: 100vh;
