🎩 routing : index => list => item

--- a/templates/item.hbs
+++ b/templates/item.hbs
@@ -1,8 +1,9 @@
 <div class="test">
 	<a class="back" href="../">back</a>
-    {{#item }}
-	    <h1>{{title}}</h1>
+    {{#item}}
+	    <h1>{{titre}}</h1>
     	<p>{{{description}}}</p>
+    	<img src="{{visuel}}">
     {{/item}}
 
 </div>
