--- a/templates/list.hbs
+++ b/templates/list.hbs
@@ -1,6 +1,6 @@
 <div class="home">
 	<a class="back" href="../">back</a>	
 	{{#items }}
-		<p><a href="{{_id}}">{{titre}}</a></p>
+		<p><a href="{{titre_slug}}">{{titre}}</a></p>
 	{{/items}}
 </div>
