--- a/templates/list.hbs
+++ b/templates/list.hbs
@@ -1,6 +1,9 @@
-<div class="home">
-	<a class="back" href="../">back</a>	
+<div class="list">
 	{{#list}}
-		<p><a href="{{titre_slug}}">{{titre}}</a></p>
+		<a href="{{titre_slug}}" class="item">
+			<div class="item-date">{{date}}</div>
+			<div class="item-titre">{{titre}}</div>
+			<!-- <img src="{{visuel}}"> -->
+		</a>
 	{{/list}}
 </div>
