--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,30 +64,6 @@ body{
 @import 'swiper.min.css';
 
 /* common */
-.menu-prompt{
-	position: absolute;
-	cursor: pointer;
-	z-index: 1;
-	top: 50px;
-	left: 100px;
-}
-
-.logo{
-	position: absolute;
-	z-index: 1;
-	right: 100px;
-	top: 50px;
-}
-
-.table{
-	display: table
-}
-
-.cell{
-	display: table-cell;
-  	vertical-align: middle;
-}
-
 body > footer{
 	z-index: 1;
 	display: flex;
@@ -122,6 +98,98 @@ body > footer:hover{
 	position: relative;
 	z-index: 0;
 }
+
+.table{
+	display: table
+}
+
+.cell{
+	display: table-cell;
+  	vertical-align: middle;
+}
+
+.logo{
+	position: absolute;
+	z-index: 1;
+	top: 50px;
+}
+
+body > .logo{
+	right: 100px;
+}
+
+.menu .logo{
+	left: 50%; transform: translateX(-50%);
+}
+
+.menu-prompt{
+	position: absolute;
+	cursor: pointer;
+	z-index: 1;
+	top: 50px;
+	left: 100px;
+}
+
+.menu{
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
+	color: white;
+	font-family: 'PlutoCondBold';
+	text-align: center;
+	z-index: 1;
+	text-transform: uppercase;
+}
+
+.menu ul{
+	position: absolute;
+	top: 50%; left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.menu .home{
+	width: 16px;
+	height: 16px;
+	border: 1px solid white;
+	position: absolute;
+	top: -40px; 
+	left: 50%; transform: translateX(-50%);
+}
+
+.menu .close{
+	position: absolute;
+	bottom: -40px; 
+	left: 50%; transform: translateX(-50%);
+	width: 17px; height: 17px;
+	background: url(../img/icn-close.png) no-repeat;
+}
+
+.menu .home,
+.menu .close{
+	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.menu li{
+	font-size: 18px;
+	line-height: 2.5;
+}
+
+.menu a{
+	color: white;
+	text-decoration: none;
+}
+
+
+.nav{
+	position: absolute;
+	z-index: 1;
+}
+
+.nav a{
+	color: white;
+}
+
 
 /* home */
 .home .swiper-slide{
