--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -7,7 +7,7 @@
 					<div class="txtblock">
 						<div class="moment pluto-bold">prochainement</div> {{! à dynamiser }}
 						<h1 class="title pluto-bold">{{titre}}</h1>
-						<div class="description">{{{description}}}</div>
+						<div class="auteurs">{{{auteurs}}}</div>
 					</div>
 				</div>
 				<!--  <img src="{{visuel}}"> -->
