amend list : absolute path hrefs …

--- a/templates/list.hbs
+++ b/templates/list.hbs
@@ -4,7 +4,7 @@
 	<div class="_nano items">
 	    <div class="_nano-content">
 			{{#list}}
-				<a href="{{collection}}/{{titre_slug}}" class="item">
+				<a href="{{root}}/{{titre_slug}}" class="item">
 					<div class="item-date">{{date}}</div>
 					<div class="item-title">{{titre}}</div>
 					<!-- <img src="{{visuel}}"> -->
