upddate preprod, on a friday evening. YOLO.

--- a/templates/list.hbs
+++ b/templates/list.hbs
@@ -1,8 +1,8 @@
 <div class="section list">
 	<div class="titre">les spectacles</div>
 
-	<div class="_nano items">
-	    <div class="_nano-content">
+	<div class="nano items">
+	    <div class="nano-content">
 			{{#list}}
 				<a href="{{root}}/{{titre_slug}}" class="item">
 					<div class="item-date">{{date}}</div>
