--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,7 @@ body > .logo{
 }
 
 .menu{
+	opacity: 0;
 	position: absolute;
 	top: 0; left: 0; right: 0; bottom: 0;
 	color: white;
@@ -281,6 +282,7 @@ body > .logo{
 	padding: 100px;
 	background: url(../img/list-default-bg.jpg) no-repeat;
 	background-size: cover;
+	background-attachment: fixed;
 }
 .section.list:before{
 	content: "";
