* rootPath, rootEl * menu on-show :  masquer les textes de la vue en cours - pause home slider * pubsub : quiet please

--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -3,7 +3,7 @@
 		<div class="swiper-wrapper">
 			{{# items }}
 			<div class="swiper-slide table" style="background-image: url({{visuel}});">
-				<div class="cell">
+				<div class="cell menu-hide">
 					<a class="txtblock" href="spectacles/{{titre_slug}}">
 						<div class="moment pluto-bold">{{statut}}</div>
 						<h1 class="title pluto-bold">{{titre}}</h1>
@@ -14,6 +14,6 @@
 			</div>
 			{{/ items }}
 		</div>
-		<div class="swiper-pagination"></div>
+		<div class="swiper-pagination menu-hide"></div>
 	</div>
 </div>
