--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ body{
 @import 'swiper.min.css';
 
 /* common */
-body > footer{
+.page > footer{
 	z-index: 1;
 	display: flex;
 	position: absolute;
@@ -80,19 +80,19 @@ body > footer{
 	transition: color .7s ease-out;
 }
 
-body > footer > div{
+.page > footer > div{
 	margin-right: 30px;
 }
 
-body > footer > div a{
+.page > footer > div a{
 	color: rgba(150,150,150,0.6);
 	text-decoration: none;
 	font-weight: bold;
 	transition: color .7s ease-out;
 }
 
-body > footer:hover > div a,
-body > footer:hover{
+.page > footer:hover > div a,
+.page > footer:hover{
 	color: rgba(200,200,200,0.6);
 }
 
