--- a/templates/item.hbs
+++ b/templates/item.hbs
@@ -1,8 +1,11 @@
-<div class="test">
+<div class="section item">
     {{#item}}
-	    <h1>{{titre}}</h1>
-    	<p>{{{description}}}</p>
-    	<img src="{{visuel}}">
+    	<div class="wrap">
+		    <div class="status">{{statut}}</div>
+		    <h1 class="title">{{titre}}</h1>
+	    	<div class="description">{{{description}}}</div>
+	    	<img class="visual" src="{{visuel}}">
+    	</div>
     {{/item}}
 
 </div>
