--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,6 +387,10 @@ body > .logo{
 	color: #fff;
 }
 
+.section.item .description{
+	padding-right: 2em;
+}
+
 .section.item .description p{
 	margin-bottom: 1.5em;
 	line-height: 1.5em;
