--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 /* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
+html,body,div,span,applet,object,iframe,h1,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,img,ins,kbd,q,s,samp,small,strike,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
 
 
 /* vendor */
+@import url("normalize.css");
 @import url("//hello.myfonts.net/count/2e4864");
-@import url("perfect-scrollbar"); /* NB : added "style" property to this module package.json */
+@import url("perfect-scrollbar"); /* added "style" property to this module package.json */
 @import url("swiper");
-
 
 /* globals */
 @import url("global.css");
@@ -15,90 +15,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 /* home */
 @import url("home.css");
 
-
 /* section-list */
-.section.list{
-	background-image: url(../img/list-default-bg.jpg);
-}
-
-.section.list .titre{
-	/*display: none;*/
-	position: relative;
-	float: left;
-	font-family: 'PlutoCondBold';
-	text-transform: uppercase;
-	color: var(--redColor);
-	font-size: 18px;
-	letter-spacing: 0.2em;
-}
-
-.section.list .items{
-	position: relative;
-	z-index: 1;
-	height: 100%;
-	margin-left: 220px;
-}
-
-.section.list .item{
-	text-decoration: none;
-	color: rgba(255,255,255,0.3);
-	display: block;
-	margin-bottom: 1.0em;
-	transition : color .3s ease-in-out;
-}
-
-.section.list .item:hover{
-	color: rgba(255,255,255,1);
-}
-
-.section.list .item-date{
-	font-family: 'PlutoCondLight';
-	font-size: 18px;
-	text-indent: 2px;
-}
-
-.section.list .item-title{
-	font-family: 'PlutoCondBold';
-	font-size: 36px;
-	text-transform: uppercase;
-}
-
+@import url("list.css");
 
 /* section-item */
-.section.item .wrap{
-	position: relative;
-	z-index: 1;
-	height: calc(100% - 5em);
-	margin-left: 17.5vw;
-	margin-top: 10vh;
-}
-
-.section.item .status,
-.section.item .title{
-	font-family: PlutoCondBold;
-	text-transform: uppercase;
-}
-
-.section.item .status{
-	color: #ff3437;
-	font-size: 18px;
-}
-
-.section.item .title{
-	margin-bottom: 0.5em;
-	font-size: 36px;
-	color: #fff;
-}
-
-.section.item .description{
-	padding-right: 2em;
-}
-
-.section.item .description p{
-	margin-bottom: 1.5em;
-	line-height: 1.5em;
-}
-
-.section.item .visual{
-	display: none;
-}
+@import url("item.css");
