--- a/templates/list.hbs
+++ b/templates/list.hbs
@@ -1,5 +1,5 @@
 <div class="section list">
-	<div class="titre">les spectacles</div>
+	<div class="titre">{{collection}}</div>
 
 	<div class="items">
 		{{#list}}
