--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,3 +1,8 @@
+/* vars */
+:root {
+	--redColor: #e34f42;
+}
+
 .menu .logo{
 	left: 50%; transform: translateX(-50%);
 }
@@ -25,6 +30,7 @@
 	position: absolute;
 	top: 50%; left: 50%;
 	transform: translate(-50%, -50%);
+	-webkit-font-smoothing: antialiased;
 }
 
 .menu-sub{
@@ -35,6 +41,7 @@
 	height: 0; 
 	will-change: height;
 	transition: height 0.3s ease-in;
+	-webkit-font-smoothing: subpixel-antialiased;
 }
 .menu .menu-sub li{ 
 	font-size: 14px;
