--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html,body,div,span,applet,object,iframe,h1,p,blockquote,pre,a,abbr,acronym,addre
 /* vendor */
 @import url("normalize.css");
 @import url("//hello.myfonts.net/count/2e4864");
-@import url("perfect-scrollbar"); /* added "style" property to this module package.json */
+@import url("perfect-scrollbar/dist/css/perfect-scrollbar.css");
 @import url("swiper"); 
 @import url("photoswipe"); 
 @import url("photoswipe/default-skin.css"); 
