--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,4 @@ html,body,div,span,applet,object,iframe,h1,p,blockquote,pre,a,abbr,acronym,addre
 
 /* section-item */
 @import url("item.css");
+@import url("contact.css");
